--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>Olá</h1>
 <h2>hello</h2>
 <p>Paragrafo da home</p>
+<p>teste</p>
+<a>teste 2213 meu texto</a>
+
+<h3> criadno página home do meu site</h3>
